# bevy_html

./: Cargo.toml  README.md
assets/: image.html  include.html
examples/: simple.rs
src/: htmx.rs  lib.rs  named_system_registry.rs  typed_partial_reflect_deserializer.rs
