[package]
name = "spring_peeper"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lib]
name = "spring_peeper"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.12.1", features = [ "dynamic_linking", "jpeg", "default_font" ] }
html-escape = "0.2.13"
html_parser = "0.7.0"
maud = "0.25.0"
ron = { git = "https://github.com/ron-rs/ron.git", rev = "e27d1d5" }
serde = "1.0.193"
thiserror = "1.0.52"

# [patch.crates-io]
# bevy = { path = "../bevy" }
